updated todo list and made

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     </div>
     <hr />
     <div class="footer">
-      <h3>Copyright &copy; Nevin Puri 2020</h3>
+      <h3>Still being worked on!</h3>
     </div>
   </body>
 </html>
