tried implementing unsplash

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
       ></iframe>
     </div>
     <hr />
+    <button id="unsplashTest">click me</button>
     <div class="footer">
       <h3>Still being worked on!</h3>
     </div>
