added utm links

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,11 @@
         <a class="unsplashInfo" id="unsplashInfo">Photo by </a
         ><a href="#" id="name" class="unsplashInfo">Error</a
         ><a class="unsplashInfo"> on </a
-        ><a href="https://unsplash.com" class="unsplashInfo">Unsplash</a>
+        ><a
+          href="https://unsplash.com?utm_source=Nevin-weather-app&utm_medium=referral"
+          class="unsplashInfo"
+          >Unsplash</a
+        >
       </p>
     </div>
     <hr />
